--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -2,15 +2,21 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.Mobile</id>
-<<<<<<< HEAD
-        <version>1.4.1</version>
-        <title>Mobile Services for Xamarin Forms</title>
-        <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Network Detection, Phone, File System Management, SMS, File Opener, and Logging for Xamarin Forms</description>
-=======
         <version>2.0.0</version>
         <title>Mobile Service Plugins for Xamarin.Forms</title>
-        <description>XPlat Camera-Gallery Access, Geo-Location, Settings, Network Detection, Phone, File System Management, SMS, and Logging for Xamarin Forms</description>
->>>>>>> dev
+        <description>
+Includes several essentials services for development with Xamarin.Forms
+- Camera
+- Photo Gallery Access
+- Device Information
+- Network Detection and Monitoring
+- Geolocation
+- Settings
+- Phone Initiation
+- SMS Initiation
+- Text-to-Speech
+- File System Management
+        </description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
@@ -22,11 +28,10 @@
             <dependency id="Newtonsoft.Json" version="[6.0, 7)" />
         </dependencies>
         <releaseNotes>
-<<<<<<< HEAD
-=======
 2.0
 Update to Unified API
-Update Xamarin.Mobile
+Update Xamarin.Mobile 0.75
+Update to Xamarin.Forms 1.3.1
 Fix iOS defect when reading properties on device info outside of main thread
 Clean out some useless services
 Fix Text-to-speech service on android
@@ -36,7 +41,6 @@ Update to Xamarin.Mobile 0.74
 Fixes for new iOS8 file structure
 Adding AppVersion property to Device Info
 
->>>>>>> dev
 1.4.1
 FIX: settings issue with iOS
 
@@ -75,7 +79,7 @@ Initial Release
         <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\MonoAndroid10\Acr.XamForms.Mobile.dll" />
         <file src="..\bin\Release\MonoAndroid\Acr.XamForms.Mobile.Droid.dll" target="lib\MonoAndroid10\Acr.XamForms.Mobile.Droid.dll" />
         <file src="..\bin\Release\MonoAndroid\Xamarin.Mobile.dll" target="lib\MonoAndroid10\Xamarin.Mobile.dll" />
-        
+
         <!-- touch -->
         <file src="..\bin\Release\Portable\Acr.XamForms.Mobile.dll" target="lib\Xamarin.iOS10\Acr.XamForms.Mobile.dll" />
         <file src="..\bin\Release\MonoTouch\Acr.XamForms.Mobile.iOS.dll" target="lib\Xamarin.iOS10\Acr.XamForms.Mobile.iOS.dll" />
