--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -2,16 +2,21 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.UserDialogs</id>
-<<<<<<< HEAD
-        <version>2.0.2</version>
-        <title>User Dialogs for Xamarin Forms</title>
-=======
         <version>3.0.0</version>
         <title>User Dialogs Plugin for Xamarin.Forms</title>
->>>>>>> dev
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
-        <description>Alert, Confirm, Prompt, Toast, Action Sheet, Login, Loading, and Progress Dialogs calls for Xamarin Forms</description>
+        <description>
+This plugin for Xamarin.Forms contains several useful dialogs that you can call from your ViewModels
+- ActionSheet
+- Alert
+- Confirm
+- Prompt
+- Login
+- Toast
+- Loading
+- Deterministic Progress
+        </description>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
         <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -26,15 +31,13 @@
             </group>
         </dependencies>
         <releaseNotes>
-<<<<<<< HEAD
-=======
 3.0
 Tasks are now part of the interface again for easier mocking
 FIX: iOS7 dismiss and button index
 FIX: Android login password display
-Update BTProgressHUD
+Update BTProgressHUD 1.15
 Update to iOS unified
-Update to Xamarin Forms 1.3
+Update to Xamarin Forms 1.3.1
 
 2.1.2
 FIX: iOS8 iPad actionsheet
@@ -46,7 +49,6 @@ Update to XF 1.2.3
 * NEW * Login Dialog on all platforms
 iOS8 now uses UIAlertController
 
->>>>>>> dev
 2.0.2
 Fix null reference with action sheet and back button on WP8
 Fix scrolling issue with action sheet in WP8
