--- a/Acr.XamForms.UserDialogs.Droid/Acr.XamForms.UserDialogs.Droid.csproj
+++ b/Acr.XamForms.UserDialogs.Droid/Acr.XamForms.UserDialogs.Droid.csproj
@@ -64,6 +64,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DownloadDialog.cs" />
     <Compile Include="ProgressDialog.cs" />
     <Compile Include="UserDialogService.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
