--- a/Acr.XamForms.UserDialogs.WindowsPhone/Acr.XamForms.UserDialogs.WindowsPhone.csproj
+++ b/Acr.XamForms.UserDialogs.WindowsPhone/Acr.XamForms.UserDialogs.WindowsPhone.csproj
@@ -85,6 +85,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DownloadDialog.cs" />
     <Compile Include="ProgressPopUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProgressDialog.cs" />
