--- a/Acr.XamForms.UserDialogs.iOS/Acr.XamForms.UserDialogs.iOS.csproj
+++ b/Acr.XamForms.UserDialogs.iOS/Acr.XamForms.UserDialogs.iOS.csproj
@@ -37,6 +37,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DownloadDialog.cs" />
     <Compile Include="ProgressDialog.cs" />
     <Compile Include="UserDialogService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
